# Celluloid

./: 0.7z  2.7z  4.7z  5.7z  CMakeLists.txt  LICENSE
Assets/: Cel.shader
Assets/Art/Kiana/Texture/: Avatar_Kiana_Texture_Face_Color - 副本.psd
Common/: Application.cpp  Application.h  DXSample.cpp  DXSample.h  Demo.cpp  Demo.h  Shader.cpp  Shader.h
Source/: Celluoid.cpp  Celluoid.h  TestDemo.cpp  TestDemo.h  main.cpp
